Fixing alignment on product page.

--- a/se19/public/styles/style.css
+++ b/se19/public/styles/style.css
@@ -248,6 +248,7 @@ footer {
 
 .product-info{
     display: flex;
+    justify-content: center;
     gap: 1.5rem;
     flex-direction: column;
 }
